# Fast-VW

./: .gitignore  CMakeLists.txt  Core.cpp  Core.hpp  Fast_VW.cpp  Fast_simplifier.cpp  Fast_simplifier.hpp  README.md  Slow_simplifier.cpp  Slow_simplifier.hpp  Test.cpp  Test.hpp  Utils.cpp  Utils.hpp  main.cpp
Release_test/: ALL_BUILD.vcxproj  ALL_CGAL_TARGETS.vcxproj  CMakeCache.txt  Fast_VW.sln  Fast_VW.vcxproj  Fast_VW.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cgal_check_build_system.vcxproj  cmake_install.cmake  compilation_of__Fast_VW.vcxproj
data/: Shapes.ipe  Text format instructions.txt  metrics.csv  metrics_quadratic.csv
data/Arrow/: data.in
data/BigZigZag/: data.in
data/BoundaryBlock/: data.in  data.out
data/BoundaryBlock2/: BoundaryBlock2.ipe  data.in  data.out
data/India/: data.in
data/JapanMain/: data.in
data/RandomTests/0/: data.in  data.out
data/RandomTests/1/: data.in  data.out
data/RandomTests/10/: data.in  data.out
data/RandomTests/2/: data.in  data.out
data/RandomTests/3/: data.in  data.out
data/RandomTests/4/: data.in  data.out
data/RandomTests/5/: data.in  data.out
data/RandomTests/6/: data.in  data.out
data/RationalNumbers/: data.in
data/SimpleCollinear/: data.in
data/SmallZigZag/: data.in
data/StressTests/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/TallArrow/: data.in
data/VerticalConstraint/: data.in
(+66 files in other folders)
